--- a/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
+++ b/02 - Variables y Tipos de Datos/Preliminares en Clase - 02.ipynb
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1264,16 +1264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Argentina': 'Buenos Aires', 'Italia': 'Roma', 'Inglaterra': 'Londres'}"
+       "{'Colores Primarios': ['Rojo', 'Azul', 'Amarillo'],\n",
+       " 'Colores secundarios': ['Naranja', 'Violeta', 'Verde'],\n",
+       " 'Clave3': 2,\n",
+       " 'Clave4': False}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1293,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1303,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1361,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1382,7 @@
        "list"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1407,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1436,7 @@
        "3"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
